tests/paczka1/fuzzy1/34436353.err
Error in line 7: yES4oB A279 75,8
Error in line 4: A764 A764 96,9
Error in line 17: A764 A139 1,0
Error in line 30: K2JW A764 73,1
Error in line 31: K2JW A279 8,8
Error in line 37: K2JW S376 88,6
